@@ -1,3 +1,7 @@
+2002-10-31 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* Makefile.am: Added gesym-config-install target
+
 2002-10-29 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* maxim/max489-1.sym, micro/pic16F877-1.sym: Added updated symbols
