@@ -1,3 +1,7 @@
+2002-10-31 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* Makefile.am: Added libgeda-config-install target
+
 2002-10-28 Ales Hvezda   <ahvezda@geda.seul.org>
 
         * configure.in: Bumped version to 20021031
